# minecraft-server-snap

./: README.md
.github/workflows/: build-snap.yml  build-tools.yml  reusable-pack-build.yml  reusable-pack-release.yml
docs/: azure-setup.md  finding-mods.md  game-create.md  github-workflows.md  launcher.md  pack-yaml-reference.md  server-snap.md
examples/: example-pack.yaml
launcher/: electron-builder.yml  package-lock.json  package.json
launcher/resources/: manifest.json
launcher/src/: auth.js  game-manager.js  main.js  preload.js  server-ping.js  version-manager.js
launcher/src/renderer/: app.js  index.html  splash.html  styles.css
scripts/: install-pack.sh  mcron-wrapper.sh  publish-service.sh  start-server.sh  start-web.sh
snap/: snapcraft.yaml
snap/hooks/: configure
tools/game-create/: pyproject.toml  run.py
tools/game-create/game_create/: cli.py  config.py  downloader.py  fabric.py  mojang.py  packager.py  publisher.py
web/: package.json  server.js
web/public/: app.js  index.html  manifest.json  style.css  sw.js
